@@ -1,10 +1,11 @@
 # Created by Jevoom
 #
 # 19-Dec-2011
-#   Restart logging after daemon is called
+#   Attempt to fix error when stopping services: cannot read symbol as string. Assume that
+#   it is caused by :jerbil_config option
 
 module Jerbil
-  Version = '0.2.16'
+  Version = '0.2.17'
   Version_Date = '19-Dec-2011'
-  Ident = 'jerbil-0.2.16 19-Dec-2011'
+  Ident = 'jerbil-0.2.17 19-Dec-2011'
 end
