@@ -1,5 +1,10 @@
 ==History
 
+jerbil-0.2.17 19-Dec-2011
+
+Attempt to fix error when stopping services: cannot read symbol as string. Assume that
+it is caused by :jerbil_config option
+
 jerbil-0.2.16 19-Dec-2011
 
 Restart logging after daemon is called
